nfs.5: Add missing markup.

--- a/share/man/man5/nfs.5
+++ b/share/man/man5/nfs.5
@@ -91,7 +91,7 @@ Number of realignments for badly aligned mbuf data.
 Number of times mbufs have been tested for bad alignment.
 .It Va vfs.nfs.showrexmit
 Enables retransmits debug prints.
-vfs.nfs.showrtt
+.It Va vfs.nfs.showrtt
 Enables round trip time output debug printing.
 .It Va vfs.nfs.soreserve
 Controls minimum
