Sort SEE ALSO in two manual pages.

--- a/share/man/man5/nfs.5
+++ b/share/man/man5/nfs.5
@@ -100,8 +100,8 @@ socket buffer size reservation.
 .El
 .Sh SEE ALSO
 .Xr vfs 7 ,
-.Xr mount_nfs 8 ,
-.Xr mountd 8
+.Xr mountd 8 ,
+.Xr mount_nfs 8
 .Sh HISTORY
 The
 .Nm
