<pthread.h>: Add missing 'const' to four functions.

--- a/lib/libpthread/pthread.3
+++ b/lib/libpthread/pthread.3
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man3/pthread.3,v 1.33 2009/04/01 08:08:25 trhodes Exp $
 .\"
-.Dd February 22, 2018
+.Dd March 3, 2018
 .Dt PTHREAD 3
 .Os
 .Sh NAME
@@ -294,12 +294,12 @@ Set the detach state in a thread attributes object.
 Destroy a mutex attributes object.
 .It Xo
 .Ft int
-.Fn pthread_mutexattr_getprioceiling "pthread_mutexattr_t * restrict attr" "int * restrict ceiling"
+.Fn pthread_mutexattr_getprioceiling "const pthread_mutexattr_t * restrict attr" "int * restrict ceiling"
 .Xc
 Obtain priority ceiling attribute of mutex attribute object.
 .It Xo
 .Ft int
-.Fn pthread_mutexattr_getprotocol "pthread_mutexattr_t * restrict attr" "int * restrict protocol"
+.Fn pthread_mutexattr_getprotocol "const pthread_mutexattr_t * restrict attr" "int * restrict protocol"
 .Xc
 Obtain protocol attribute of mutex attribute object.
 .It Xo
@@ -309,7 +309,7 @@ Obtain protocol attribute of mutex attribute object.
 Get the process shared setting from a mutex attributes object.
 .It Xo
 .Ft int
-.Fn pthread_mutexattr_gettype "pthread_mutexattr_t * restrict attr" "int * restrict type"
+.Fn pthread_mutexattr_gettype "const pthread_mutexattr_t * restrict attr" "int * restrict type"
 .Xc
 Obtain the mutex type attribute in the specified mutex attributes object.
 .It Xo
