--- a/bin/ps/ps.1
+++ b/bin/ps/ps.1
@@ -500,14 +500,12 @@ wait channel (as a symbolic name)
 exit or stop status (valid only for stopped or zombie process)
 .El
 .Sh FILES
-.Bl -tag -width /var/db/kvm_kernel.db -compact
+.Bl -tag -width ".Pa /boot/kernel/kernel" -compact
 .It Pa /dev/kmem
 default kernel memory
 .It Pa /var/run/dev.db
 /dev name database
-.It Pa /var/db/kvm_kernel.db
-system namelist database
-.It Pa /boot/kernel
+.It Pa /boot/kernel/kernel
 default system namelist
 .It Pa /proc
 the mount point of
