Add references to mount_hammer2.8 in a few manual pages.

--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -410,6 +410,7 @@ have permission to load the module.
 .Xr mount_devfs 8 ,
 .Xr mount_ext2fs 8 ,
 .Xr mount_hammer 8 ,
+.Xr mount_hammer2 8 ,
 .Xr mount_hpfs 8 ,
 .Xr mount_mfs 8 ,
 .Xr mount_msdos 8 ,
