A little mdoc cleanup in 3 manual pages.

--- a/share/man/man5/periodic.conf.5
+++ b/share/man/man5/periodic.conf.5
@@ -506,7 +506,7 @@ for the previous day.
 Set to the number of maillog files that should be checked
 for yesterday's mail rejects.
 .It Va daily_status_mail_rejects_shorten
-.Pt Vt bool
+.Pq Vt bool
 Set to
 .Dq Li YES
 if you want to shorten the mail rejections output.
