--- a/sbin/mkinitrd/mkinitrd.8
+++ b/sbin/mkinitrd/mkinitrd.8
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2010 The DragonFly Project.  All rights reserved.
+.\" Copyright (c) 2010,2018 The DragonFly Project.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March 3, 2015
+.Dd March 30, 2018
 .Dt MKINITRD 8
 .Os
 .Sh NAME
@@ -39,23 +39,52 @@
 .Op Fl b Ar bootdir
 .Op Fl c Ar contentsdir
 .Op Fl t Ar tmpdir
+.Op Fl s Ar size
+.Op Fl S Ar max_size
 .Sh DESCRIPTION
 The
 .Nm
 script builds a ramdisk (md) image based on the UFS filesystem containing
 only the most basic tools, such as a minimal
 .Xr init 8 ,
-.Xr sh 1
-as well as many
+.Xr sh 1 ,
+various
 .Xr mount 8
-utilities.
+utilities,
+.Xr lvm 8 ,
+.Xr cryptsetup 8 ,
+.Xr tcplay 8 ,
+as well as some basic networking tools.
+And the ramdisk is required to help mount the encrypted root partition.
 .Pp
-It will also copy the contents of
+The contents of
 .Pa /usr/share/initrd
-onto the ramdisk, maintaining the same hierarchy.
+will be copied onto the ramdisk, maintaining the same hierarchy.
 This directory can be changed with the
 .Fl c
 option.
+.Pp
+By default
+.Nm
+will calculate the contents size and create a ramdisk just big enough.
+The
+.Fl s
+option accepting an integer (number of MiB) can specify the required
+size of the ramdisk.
+The special value of
+.Pa 0
+can be given to ignore the
+.Pa INITRD_SIZE
+setting from the configuration file as described below.
+The
+.Fl S
+option also accepts an integer (number of MiB) and constrains the maximum
+allowed size of the ramdisk.
+Specifying a value of
+.Pa 0
+will ignore the
+.Pa INITRD_SIZE_MAX
+setting from the configuration file.
 .Pp
 On completion, the final image will be copied to
 .Pa /boot/kernel/initrd.img.gz ,
@@ -82,7 +111,7 @@ following variables (defaults are in
 .Pa /etc/defaults/mkinitrd.conf ) :
 .Bd -literal -offset indent
 BUILD_DIR
-INITRD_SIZE
+INITRD_SIZE_MAX
 INITRD_DIRS
 CONTENT_DIRS
 .Ed
@@ -143,6 +172,9 @@ vfs.root.realroot="local:ufs:/dev/vg00/lv0[:OPTIONS]"
 .Ed
 .Bd -literal -offset indent
 vfs.root.realroot="crypt:ufs:/dev/ad0s0a:secvolume[:OPTIONS]"
+.Ed
+.Bd -literal -offset indent
+vfs.root.realroot="crypt:hammer2:serno/XXXXXX.s1d:root[:OPTIONS]"
 .Ed
 .Sh SEE ALSO
 .Xr md 4 ,
