--- a/sbin/mkinitrd/mkinitrd.8
+++ b/sbin/mkinitrd/mkinitrd.8
@@ -1,5 +1,6 @@
 .\"
-.\" Copyright (c) 2010,2018 The DragonFly Project.  All rights reserved.
+.\" Copyright (c) 2010, 2018
+.\"	The DragonFly Project.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -69,7 +70,7 @@ By default
 will calculate the contents size and create a ramdisk just big enough.
 The
 .Fl s
-option accepting an integer (number of MiB) can specify the required
+option accepting an integer (number of MB) can specify the required
 size of the ramdisk.
 The special value of
 .Pa 0
@@ -78,7 +79,7 @@ can be given to ignore the
 setting from the configuration file as described below.
 The
 .Fl S
-option also accepts an integer (number of MiB) and constrains the maximum
+option also accepts an integer (number of MB) and constrains the maximum
 allowed size of the ramdisk.
 Specifying a value of
 .Pa 0
@@ -169,12 +170,10 @@ vfs.root.realroot="tcplay:<FS TYPE>:<DEVICE PATH>:<VOLUME NAME>[:<OPTIONS>]"
 .Sh EXAMPLES
 .Bd -literal -offset indent
 vfs.root.realroot="local:ufs:/dev/vg00/lv0[:OPTIONS]"
-.Ed
-.Bd -literal -offset indent
+
 vfs.root.realroot="crypt:ufs:/dev/ad0s0a:secvolume[:OPTIONS]"
-.Ed
-.Bd -literal -offset indent
-vfs.root.realroot="crypt:hammer2:serno/XXXXXX.s1d:root[:OPTIONS]"
+
+vfs.root.realroot="crypt:hammer2:/dev/serno/XXXXXX.s1d:root[:OPTIONS]"
 .Ed
 .Sh SEE ALSO
 .Xr md 4 ,
