--- a/share/man/man9/ioctl.9
+++ b/share/man/man9/ioctl.9
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 22, 2018
+.Dd April 4, 2018
 .Dt IOCTL 9
 .Os
 .Sh NAME
@@ -94,6 +94,8 @@ Here are some examples:
 .Xr nata 4
 .It 'B'
 .Xr bpf 4
+.It 'C'
+.Xr cam 4
 .It 'C'
 .Xr ciss 4
 .It 'd'
