zone.9: Include <vm/vm_object.h> for struct vm_object.

--- a/share/man/man9/zone.9
+++ b/share/man/man9/zone.9
@@ -39,6 +39,7 @@
 .Sh SYNOPSIS
 .In sys/param.h
 .In sys/queue.h
+.In vm/vm_object.h
 .In vm/vm_zone.h
 .Ft void
 .Fn zbootinit "vm_zone_t z" "char *name" "size_t size" "void *item" "long nitems"
